# TTS-Utils

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
TTS_Utils/: __init__.py  dataset_builder.py  metrics.py  normalization.py
dataset_builder/: __init__.py
metrics/: __init__.py  metrics.py
normalization/: __init__.py  abreviacoes.py  normalization.ipynb  normalization.py  run.sh
transcricao_de_audio/: requirements.txt  run.sh  transcribe_audio.py
