[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "TTS_Utils"
version = "0.1.0"
description = "Conjunto de ferramentas para processamento de áudio e texto em português para tarefas de Text-to-Speech (TTS)."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "RAIA - Rede de Avanço em Inteligência Artificial", email = "your@email.com" }
]
requires-python = ">= 3.9"
dependencies = [
    "faster_whisper==1.1.1",
    "huggingface_hub==0.31.4",
    "librosa==0.11.0",
    "num2words==0.5.14",
    "openai_whisper==20240930",
    "pandas==2.2.3",
    "pydub==0.25.1",
    "python-Levenshtein==0.27.1",
    "torch==2.6.0",
    "torchaudio==2.6.0",
]

[project.urls]
Homepage = "https://github.com/gruporaia/TTS-Utils"
