[metadata]
name = TTS_Utils
version = 0.1.0
description = Conjunto de ferramentas para processamento de áudio e texto em português para tarefas de Text-to-Speech (TTS).
long_description = file: README.md
long_description_content_type = text/markdown
author = RAIA - Rede de Avanço em Inteligência Artificial
author_email = your@email.com
license = MIT
url = https://github.com/gruporaia/TTS-Utils
project_urls =
    Homepage = https://github.com/gruporaia/TTS-Utils

[options]
packages = find:
python_requires = >=3.9
install_requires =
    openai-whisper==20240930
    torch==2.6.0
    pydub==0.25.1
    pandas==2.2.3
    num2words==0.5.14
    python-Levenshtein==0.27.1
    torchaudio==2.6.0
    librosa==0.11.0
    git+https://github.com/sarulab-speech/UTMOSv2.git
